2006-03-09  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Added PageParser.jvm.cs, WebServiceParser.jvm.cs

2006-03-07  Chris Toshok  <toshok@ximian.com>

	* Page.cs (InitializeStyleSheet): load the style sheet theme using
	ThemeDirectoryCompiler.
	(InitializeTheme): load the page's theme using
	ThemeDirectoryCompiler.
	(InternalProcessRequest): call InitializeTheme after OnPreInit.
	(FrameworkInitialize): call InitializeStyleSheet.
	(PageTheme,StyleSheetPageTheme): new properties to get the
	respective themes.

	* Control.cs (ApplyStyleSheetSkin): new method.  Calls ApplySkin
	on the ControlSkin (if there is one) for this control in the
	page's StyleSheetSkin.
	(ApplyThemeRecursively): applies the page's theme recursively to
	the control hierarchy.  Must be done this way because the control
	tree is already present when we apply the theme (it has to be,
	since theme's override settings).

	* PageTheme.cs (GetControlSkin): add internal call to do the
	lookup for us.

	* PageThemeFileParser.cs: the parser object that represents each
	individual skin file.

	* PageThemeParser.cs: the parser object that represents the entire
	theme directory.

	* PageThemeBuilder.cs: this class generates the right exception on
	the right event, but it's not hooked up yet.

2006-03-02  Chris Toshok  <toshok@ximian.com>

	* Control.cs (ApplyStyleSheetTheme): remove the exception, and add
	a MonoTODO.

	* Page.cs (Theme): implement setter/getter.
	(StyleSheetTheme): same.
	
	* PageParser.cs (ProcessMainAttributes): parse the Theme and
	StyleSheetTheme attributes.

2006-02-27  Chris Toshok  <toshok@ximian.com>

	* TemplateControl.cs: corcompare work.

	* ExpressionBindingCollection.cs: same.

	* HierarchicalDataSourceControl.cs: same.

	* PostBackOptions.cs: same.

	* ClientScriptManager.cs: same.

	* FilterableAttribute.cs: same.

	* ControlCollection.cs: same.

	* DataBindingCollection.cs: same.
	
	* PropertyEntry.cs: mark ctor internal.
