@@ -33,6 +33,8 @@
 using System;
 using System.Collections;
 using System.ComponentModel;
+using System.Web.Util;
+using System.IO;
 
 namespace System.Web.UI
 {
@@ -90,13 +92,14 @@ namespace System.Web.UI
 
 		internal static MasterPage CreateMasterPage (TemplateControl owner, HttpContext context, string masterPageFile, IDictionary contentTemplateCollection)
 		{
-			MasterPage masterPage = MasterPageParser.GetCompiledMasterInstance (masterPageFile, masterPageFile /* XXX virtualPath */, context);
+			MasterPage masterPage = MasterPageParser.GetCompiledMasterInstance (masterPageFile, owner.Page.MapPath (masterPageFile), context);
 			if (contentTemplateCollection != null) {
 				foreach (string templateName in contentTemplateCollection.Keys) {
 					if (masterPage.ContentTemplates[templateName] == null)
 						masterPage.ContentTemplates [templateName] = contentTemplateCollection[templateName];
 				}
 			}
+			masterPage.Page = owner.Page;
 			masterPage.InitializeAsUserControlInternal ();
 			return masterPage;
 		}
